--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 ash = "0.38.0"
 
 [[bin]]
-name = "00"
+name = "01_0"
+path = "src/tutorials/instance/01_0_vulkan_instance_plain.rs"
+
+[[bin]]
+name = "01_1"
 path = "src/tutorials/instance/01_1_vulkan_instance.rs"
